# proxmox-ve-toolkit

./: .env.example  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SETUP.md  TODO.md  conftest.py  init.py  package.json  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.local.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/instructions/: configuration.md  documentation.md  markdown.instructions.md  powershell-architecture.instructions.md  powershell-documentation-standards.instructions.md  powershell-error-handling-standards.instructions.md  powershell-export-standards.instructions.md  powershell-modules.instructions.md  powershell-scripts.instructions.md  powershell-scripts.md  powershell.instructions.md  python-code.md  python.instructions.md  yaml.instructions.md
.github/prompts/: Generate-PowerShell-Script.prompt.md
.github/workflows/: quality-checks.yml
configs/: ai-tools.yaml  code-stack.yaml  ide-tools.yaml  os-support.yaml  superclaude.yaml
scripts/: Invoke-Python.psm1  README.md  Run-Python.psm1  install.ps1  install.sh  install.zsh
scripts/powershell/: Fix-MarkdownLinting.ps1  Get-ProviderModels.psm1  Install-QualityTool.psm1  Install-QualityTools.psm1  Invoke-QualityChecks.psm1  install.ps1
scripts/powershell/TODO_unfinished/: TODO_input.ps1
scripts/powershell/proxmox/ProxmoxMigration/: Orchestrator.ps1  README.md  (+2 more)
scripts/shell/: install.sh
tests/: test_config_validation.py  test_init.py  test_run_python.ps1
