[tool.poetry]
name = "ai-codeassist-boilerplate"
version = "0.1.0"
description = "AI Code Assist Boilerplate project"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
types-PyYAML = "^6.0"
pytest = "^7.0"
black = "^24.3"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
